--- a/package.json
+++ b/package.json
@@ -1,6 +1,11 @@
 {
   "dependencies": {
     "@types/jquery": "^3.5.14",
+    "@types/leaflet": "^1.9.0",
+    "mime": "^3.0.0",
     "uniq": "^1.0.1"
+  },
+  "devDependencies": {
+    "@types/node": "^18.11.10"
   }
 }
